<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/choicecity"
            android:textColor="#FFC107"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="#3F51B5"
            android:gravity="center|start"
            android:onClick="omsk"
            android:text="@string/omsk"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="98dp"
            android:layout_marginStart="276dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/omsk" />

        <Button
            android:id="@+id/button2"
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3F51B5"
            android:gravity="center|start"
            android:text="@string/moskow"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            android:onClick="moskva"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#3F51B5"
            android:gravity="center|start"
            android:text="@string/kasp"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            android:onClick="kasp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3F51B5"
            android:gravity="center|start"
            android:text="@string/novosib"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            android:onClick="novosib"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3F51B5"
            android:gravity="start"
            android:text="@string/tumen"
            android:textSize="24sp"
            app:cornerRadius="0dp"
            android:onClick="tum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="104dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/moskow" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/kaspiisk" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/novosib" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/tumen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>